--- a/src/assets/demo/Badge.scss
+++ b/src/assets/demo/Badge.scss
@@ -41,6 +41,23 @@
     }
 }
 
+.status-badge {
+    &.status-publish {
+        background: #C8E6C9;
+        color: #256029;
+    }
+
+    &.status-trash {
+        background: #FFCDD2;
+        color: #C63737;
+    }
+
+    &.status-draft {
+        background: #B3E5FC;
+        color: #23547B;
+    }
+}
+
 .product-badge {
     border-radius: var(--border-radius);
     padding: .25em .5rem;
