tinymce author and product seo description added view btn added in all fullwidth copy to clipboard

--- a/src/assets/demo/flags/flags.css
+++ b/src/assets/demo/flags/flags.css
@@ -33,3 +33,6 @@ span.flag{width:44px;height:30px;display:inline-block;}img.flag{width:30px}.flag
      text-transform: capitalize;
 }
  
+.tox-notification--warning{
+     display: none !important;
+}
