height of editor

--- a/src/assets/demo/flags/flags.css
+++ b/src/assets/demo/flags/flags.css
@@ -36,3 +36,7 @@ span.flag{width:44px;height:30px;display:inline-block;}img.flag{width:30px}.flag
 .tox-notification--warning{
      display: none !important;
 }
+
+.blogmodal .p-dialog-header{
+     display: none;
+}
